ansible-kub/roles/kube-wordpress/files/K8s-WordPress/service.yml
kind: Service
apiVersion: v1
metadata:
  name: wordpress
spec:
  selector:
    app:  nginx
  type:  LoadBalancer
  ports:
  - protocol: TCP
    port:  80
    targetPort:  80

#  | ClusterIP | NodePort
