ansible-kub/roles/kube-wordpress/files/K8s-WordPress/wordpress-deploy.yml

apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
    tier: frontend
  type:  NodePort
  ports:
  - nodePort: 31000
    port:  80
    targetPort:  80

# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: wp-pvc
#   labels:
#     app: wordpress
# spec:
#   selector:
#     matchLabels:
#       storage: wordpress-storage
#   storageClassName: local-storage
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 2Gi
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deploy
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: wordpress:latest
        name: wordpress
        # env:
        # - name: WORDPRESS_DB_HOST
        #   value: mysql-svc
        # - name: WORDPRESS_DB_NAME
        #   value: wpdb
        # - name: WORDPRESS_DB_USER
        #   valueFrom:
        #       secretKeyRef: 
        #        name: mysqlsecret 
        #        key: username
        # - name: WORDPRESS_DB_PASSWORD
        #   valueFrom:
        #       secretKeyRef: 
        #        name: mysqlsecret 
        #        key: wpass
        ports:
        - containerPort: 80
          name: wordpress
      #   volumeMounts:
      #   - name: wordpress-persistent-storage
      #     mountPath: /var/www/html
      # volumes:
      # - name: wordpress-persistent-storage
      #   persistentVolumeClaim:
      #     claimName: wp-pvc
